# programming_list_Python

./: README.md
ai_product/: README.md  compose.yaml
algorithm/: circular_buffer_test.py  moving_average.py  stack.py
algorithm/algorithm_nutshell/: circular_buffer.py  moving_average_test.py  stack_heap.py  stack_test.py
cookbook/: calculate_with_dict.py  collections_counter.py  deque.py  filtering_list_elements.py  grouping_records.py  heapq_test.py  namedtuple.py  priority_queue.py  remove_duplicates.py  remove_duplicates2.py  subset_of_a_dictionary.py
design_pattern/: composite.py  formbuilder.py  observer.py  tabulator.py
effective/: item_52.py
effective_python/: item_41.py
fluent/: ch08.py
machine_learning/: .gitignore
programming/: sorting_hetero_seq.py
python_cs/: .gitignore  Dockerfile  compose.yaml
python_cs/test/: Forecast_6_8.xpm  pyproject.toml
python_cs/test/ai/search/: maze.py
python_cs/test/computation/: containsGAGA.py  temp.py  utils.py
python_cs/test/design_pattern/: Event.py  Qtrack.py  barchart1.py  barchart2.py  barchart3.py  diagram1.py  diagram2.py  eventhandler1.py  eventhandler2.py  formbuilder.py  gameboard1.py  gameboard2.py  gameboard3.py  gameboard4.py  hello.pyw  pointstore1.py  pointstore2.py  render1.py  render2.py  stationary1.py  stationary2.py  unpack.py
python_cs/test/design_pattern/Image/: Png.py  Xbm.py  Xpm.py  __init__.py
python_cs/test/technique/: frenchdeck.py
tdd/: .gitignore  functional_test.py
web_scraping/: web_crawler_models.ipynb  web_crawlers.ipynb  web_scraping_test.ipynb
(+192 files in other folders)
